--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "node_modules\\.bin\\cypress run",
-    "runtests": "npm run test --"
-
     
+    "test": "node_modules\\.bin\\cypress run --config pageLoadTimeout=100000",
+    "runtests1": "npm run test --"
   },
   "keywords": [],
   "author": "",
